--- a/src/page_modules/sorryPage/SorryPage.css
+++ b/src/page_modules/sorryPage/SorryPage.css
@@ -100,3 +100,25 @@ body {
 @media (min-width: 1360px) {
   .change-width {
     max-width: 65% !important; } }
+
+.wrapper-general {
+  padding: 20px;
+  max-width: 50%; }
+  .wrapper-general .wrapper-img img {
+    display: block;
+    margin: auto; }
+  .wrapper-general .wrapper-text {
+    margin: 0 auto;
+    margin-top: 20px;
+    max-width: 70%;
+    text-align: center; }
+    .wrapper-general .wrapper-text .uns-leid {
+      color: #00619e; }
+  .wrapper-general .buttons-container {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
