--- a/src/page_modules/sorryPage/SorryPage.scss
+++ b/src/page_modules/sorryPage/SorryPage.scss
@@ -2,12 +2,32 @@
 @import "../../styles/partials/mixins";
 @import "../../styles/partials/variables";
 
+.wrapper-general {
+	padding: 20px;
+	max-width: 50%;
+	.wrapper-img {
+		img {
+			display: block;
+			margin: auto;
+		}
+	}
+	.wrapper-text {
 
-// .wrapper-sorry{
-//     .main-btn{
-//         margin: 10px 0x;
-//     }
-// }
-
-.card-container{
+        .uns-leid{
+            color: $secondaryColor; 
+        }
+        margin: 0 auto;
+		margin-top: 20px;
+		max-width: 70%;
+		text-align: center;
+	}
+	.buttons-container {
+		width: 70%;
+		margin: 0 auto;
+		margin-top: 50px;
+        display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 }
