--- a/src/shared_modules/Button/Button.scss
+++ b/src/shared_modules/Button/Button.scss
@@ -1,126 +1,130 @@
 @import "../../styles/partials/variables";
-@import"../../styles/partials/mixins";
+@import "../../styles/partials/mixins";
 
 .main-btn {
-    background-color: $tertiaryColor;
-    width: 100%;
-    height: max-content;
-    padding: 15px;
-    margin: auto;
-    font-family: $primaryFont;
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: $light;
-    border: 1.7px solid $tertiaryColor;
-    border-radius: 50px;
-    cursor: pointer;
-    margin: 30px 0px;
-    text-transform: uppercase;
-    transition: all 300ms ease-in-out;
+	background-color: $tertiaryColor;
+	width: 100%;
+	height: max-content;
+	padding: 15px;
+	margin: auto;
+	font-family: $primaryFont;
+	font-size: 1.1rem;
+	font-weight: bold;
+	color: $light;
+	border: 1.7px solid $tertiaryColor;
+	border-radius: 50px;
+	cursor: pointer;
+	margin: 30px 0px;
+	text-transform: uppercase;
+	transition: all 300ms ease-in-out;
 
+	&:hover {
+		color: $tertiaryColor;
+		background-color: transparent;
+	}
 
-    &:hover{
-    color: $tertiaryColor;
-    background-color: transparent;
-    }
+	&:focus {
+		outline: 0;
+	}
 
-    &:focus{
-    outline: 0;
-    }
+	@include tablet-medium {
+		width: 70%;
+	}
 
-    @include tablet-medium{
-    width: 70%;
-    }
+	@include tablet-large {
+		width: 80%;
+	}
 
-    @include tablet-large{
-    width: 80%;
-    }
+	@include desktop-small {
+		font-size: 0.8rem;
+	}
 
-    @include desktop-small{
-    font-size: 0.8rem;
-    }
+	@include desktop-medium {
+		width: 70%;
+	}
 
-    @include desktop-medium{
-    width: 70%;
-    }
+	&.secondary-btn {
+		background-color: transparent;
+	}
 
-    &.secondary-btn{
-       background-color: transparent;
-    }
+	&.back-button {
+		position: relative;
+		font-size: 1rem;
+		background-color: transparent;
+		color: $tertiaryColor;
+		width: max-content;
+		text-transform: initial;
+		box-sizing: border-box;
+		padding: 10px 25px 10px 36px;
+		margin: 0px;
 
-    &.back-button {
-        position: relative;
-        font-size: 1rem;
-        background-color: transparent;
-        color: $tertiaryColor;
-        width: max-content;
-        text-transform: initial;
-        box-sizing: border-box;
-        padding: 10px 25px 10px 36px;
-        margin:0px;
+		&:hover {
+			background-color: $tertiaryColor;
+			color: white;
 
-        &:hover{
-        background-color: $tertiaryColor;
-        color: white;
-           
-           &:after{
-           background-image: url(../../assets/images/icons/arrow-white.svg);
-           }
+			&:after {
+				background-image: url(../../assets/images/icons/arrow-white.svg);
+			}
+		}
 
-        }
+		&:after {
+			content: "";
+			position: absolute;
+			left: 13px;
+			background-image: url(../../assets/images/icons/back.svg);
+			background-repeat: no-repeat;
+			width: 35px;
+			height: 35px;
 
-        &:after{
-        content: "";
-        position: absolute;
-        left: 13px;
-        background-image: url(../../assets/images/icons/back.svg);
-        background-repeat: no-repeat;
-        width: 35px;
-        height: 35px;
+			@include desktop-small {
+				top: 8px;
+				width: 35px;
+				height: 35px;
+			}
+		}
 
-        @include desktop-small{
-        top: 8px;
-        width: 35px;
-        height: 35px;
-        }
-    }
+		@include desktop-small {
+			font-size: 0.7rem;
+		}
+	}
 
-    @include desktop-small{
-    font-size: 0.7rem;
-    }
+	&.nav-number {
+		border-radius: 0px;
+		margin: 0px;
+		font-size: 0.9rem;
+		padding: 12px 12px 12px 30px;
+		position: relative;
 
-   }
+		&:after {
+			content: "";
+			background-image: url(../../assets/images/icons/telf.svg);
+			background-repeat: no-repeat;
+			width: 20px;
+			height: 20px;
+			position: absolute;
+			left: 6px;
+			top: 10px;
+		}
 
-   &.nav-number{
-    border-radius: 0px;
-    margin: 0px;
-    font-size: 0.9rem;
-    padding: 12px 12px 12px 30px;
-    position: relative;
+		@include tablet-medium {
+			width: 100%;
+		}
 
-      &:after{
-      content: "";
-      background-image: url(../../assets/images/icons/telf.svg);
-      background-repeat: no-repeat;
-      width: 20px;
-      height:20px;
-      position: absolute;
-      left: 6px;
-      top: 10px;
-      }
-
-      @include tablet-medium{
-      width: 100%;
-      }
-
-      @include desktop-small{
-      font-size: 0.7rem;
-      }
-
-   }
-
+		@include desktop-small {
+			font-size: 0.7rem;
+		}
+	}
 }
 
-.secondary-btn{
+.transparent-button {
+	background-color: transparent !important;
+	color: $tertiaryColor;
+	&:hover {
+		background-color: $tertiaryColor !important;
+		color: white;
+	}
+}
 
+.small-margin {
+	margin: 5px 0;
 }
