--- a/src/shared_modules/Stepper/Stepper.scss
+++ b/src/shared_modules/Stepper/Stepper.scss
@@ -15,7 +15,9 @@
     width: 100%;
   }
 
-  .progressBar {
+  .progress-bar {
+   
+
     li {
       list-style-type: none;
       display: inline-block;
@@ -33,8 +35,20 @@
         font-size: 0.8rem;
       }
 
+      &.is-active:before{
+        background-color: $secondaryColor;
+        color: white;
+      }
+      &.is-active:after{
+        background-color: transparent;
+        border-bottom: 1px solid $secondaryColor;
+        
+      }
+
+      
+
       &:before {
-        content: "1";
+        content: attr(data-content);
         line-height: 30px;
         border-radius: 50%;
         width: 30px;
@@ -42,8 +56,9 @@
         display: block;
         text-align: center;
         margin: 0 auto 5px;
-        background-color: $secondaryColor;
-        color: white;
+        background-color: #f0f9f9;
+        border: 1px solid $secondaryColor;
+        color: $secondaryColor;
 
         @include tablet-medium {
           width: 35px;
@@ -63,7 +78,8 @@
         position: absolute;
         width: 100%;
         height: 1px;
-        background-color: $secondaryColor;
+        // background-color: $secondaryColor;
+        border-bottom: 1px dashed $secondaryColor;
         top: 15px;
         left: -50%;
         z-index: -1;
