--- a/src/shared_modules/Stepper/Stepper.css
+++ b/src/shared_modules/Stepper/Stepper.css
@@ -34,12 +34,12 @@
       width: 100%; } }
   .step-container .progress-bar {
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    width: 100%; }
     .step-container .progress-bar li {
       list-style-type: none;
       display: inline-block;
       flex: 1;
-      max-width: 25%;
       position: relative;
       text-align: center;
       font-size: 0.8rem;
