Loading done for appoinment and dates // 3 first months are called

--- a/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.css
+++ b/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.css
@@ -1,3 +1,8 @@
+.calendar-online-page .center-loading {
+  width: 100%;
+  display: flex;
+  justify-content: center; }
+
 .calendar-online-page .card-container {
   margin-bottom: 20px; }
   .calendar-online-page .card-container .button-container {
