--- a/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
+++ b/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
@@ -34,5 +34,10 @@
 .calendar-appointment-page .card-container {
   padding: 0px; }
 
+.loading-center {
+  width: 100%;
+  display: flex;
+  justify-content: center; }
+
 input[type="radio" i] {
   background-color: red; }
