--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -44,7 +44,7 @@ html {
 
 body {
   background: #f0f9f9;
-  background-image: url(../assets/images/icons/background-body.svg);
+  background-image: url(../assets/images/icons/bg-lasik.png);
   background-repeat: no-repeat;
   background-size: 360px;
   background-position-y: 500px;
