--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -38,7 +38,7 @@ html {
 
 body {
   background: lighten($primaryColorBg, 12%);
-  background-image: url(../assets/images/icons/background-body.svg);
+  background-image: url(../assets/images/icons/bg-lasik.png);
   background-repeat: no-repeat;
   background-size: 360px;
   background-position-y: 500px;
