--- a/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.css
+++ b/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.css
@@ -1,19 +1,14 @@
-.calendar-online-page .center-loading {
-  width: 100%;
-  display: flex;
-  justify-content: center; }
-
-.calendar-online-page .card-container {
+.calendar-online-appointment-page .card-container {
   margin-bottom: 20px; }
-  .calendar-online-page .card-container .button-container {
+  .calendar-online-appointment-page .card-container .button-container {
     padding: 20px; }
-    .calendar-online-page .card-container .button-container .redirect-options {
+    .calendar-online-appointment-page .card-container .button-container .redirect-options {
       margin-bottom: 12px; }
-    .calendar-online-page .card-container .button-container .card {
+    .calendar-online-appointment-page .card-container .button-container .card {
       min-height: 55px; }
-      .calendar-online-page .card-container .button-container .card:nth-child(1) {
+      .calendar-online-appointment-page .card-container .button-container .card:nth-child(1) {
         margin-bottom: 10px; }
-      .calendar-online-page .card-container .button-container .card label {
+      .calendar-online-appointment-page .card-container .button-container .card label {
         color: #808080;
         font-weight: bold;
         position: relative;
@@ -21,23 +16,28 @@
         display: flex;
         align-items: center; }
         @media (min-width: 1080px) {
-          .calendar-online-page .card-container .button-container .card label {
+          .calendar-online-appointment-page .card-container .button-container .card label {
             font-size: 0.8rem; } }
-        .calendar-online-page .card-container .button-container .card label strong {
+        .calendar-online-appointment-page .card-container .button-container .card label strong {
           font-weight: 300;
           position: absolute;
           right: 0; }
-        .calendar-online-page .card-container .button-container .card label img {
+        .calendar-online-appointment-page .card-container .button-container .card label img {
           max-width: 40px;
           margin-right: 10px; }
-      .calendar-online-page .card-container .button-container .card input {
+      .calendar-online-appointment-page .card-container .button-container .card input {
         margin-right: 10px; }
-    .calendar-online-page .card-container .button-container .card-highlighted label {
+    .calendar-online-appointment-page .card-container .button-container .card-highlighted label {
       color: white;
       font-weight: bold; }
 
-.calendar-online-page .card-container {
+.calendar-online-appointment-page .card-container {
   padding: 0px; }
+
+.loading-center {
+  width: 100%;
+  display: flex;
+  justify-content: center; }
 
 input[type="radio" i] {
   background-color: red; }
