--- a/src/shared_modules/Calendar/Calendar.scss
+++ b/src/shared_modules/Calendar/Calendar.scss
@@ -91,6 +91,7 @@
 
                &:hover{
                // background-color: transparent;
+               // cursor: default;
                }
          }
 
