--- a/src/shared_modules/Button/Button.scss
+++ b/src/shared_modules/Button/Button.scss
@@ -17,7 +17,10 @@
 	margin: 30px 0px;
 	text-transform: uppercase;
 	transition: all 300ms ease-in-out;
-
+	&:disabled {
+		background-color: $texto;
+		border: 1.7px solid $texto;
+	}
 	&:hover {
 		color: $tertiaryColor;
 		background-color: transparent;
