--- a/src/shared_modules/Calendar/Calendar.css
+++ b/src/shared_modules/Calendar/Calendar.css
@@ -51,3 +51,23 @@
       background-color: transparent;
       color: #808080;
       font-weight: 300; }
+
+.CalendarDay__selected_span {
+  background: #82e0aa;
+  color: white;
+  border: 1px solid red; }
+
+.CalendarDay__selected {
+  background: blue;
+  color: white; }
+
+.CalendarDay__selected:hover {
+  background: orange;
+  color: white; }
+
+.CalendarDay__hovered_span:hover,
+.CalendarDay__hovered_span {
+  background: brown; }
+
+.DayPickerNavigation_button:hover {
+  border: none; }
