--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -22,6 +22,9 @@
   font-style: normal;
   font-display: swap; }
 
+.hoverable:hover {
+  cursor: pointer; }
+
 .card {
   border: 1px solid #e4e4e4;
   border-radius: 10px;
