--- a/src/shared_modules/Button/Button.css
+++ b/src/shared_modules/Button/Button.css
@@ -14,6 +14,9 @@
   margin: 30px 0px;
   text-transform: uppercase;
   transition: all 300ms ease-in-out; }
+  .main-btn:disabled {
+    background-color: #808080;
+    border: 1.7px solid #808080; }
   .main-btn:hover {
     color: #FF9900;
     background-color: transparent; }
