--- a/src/shared_modules/Card/Card.scss
+++ b/src/shared_modules/Card/Card.scss
@@ -2,6 +2,12 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/mixins";
 
+.hoverable{
+	&:hover{
+		cursor: pointer;
+	}
+}
+
 .card {
 	border: 1px solid lighten(#979797, 30%);
 	border-radius: 10px;
