--- a/src/shared_modules/Button/Button.scss
+++ b/src/shared_modules/Button/Button.scss
@@ -66,7 +66,7 @@
 			color: white;
 
 			&:after {
-				background-image: url(../../assets/images/icons/arrow-white.svg);
+				background-image: url(./../../assets/images/icons/arrow-white.svg);
 			}
 		}
 
@@ -74,7 +74,7 @@
 			content: "";
 			position: absolute;
 			left: 13px;
-			background-image: url(../../assets/images/icons/back.svg);
+			background-image: url(./../../assets/images/icons/back.svg);
 			background-repeat: no-repeat;
 			width: 35px;
 			height: 35px;
@@ -100,7 +100,7 @@
 
 		&:after {
 			content: "";
-			background-image: url(../../assets/images/icons/telf.svg);
+			background-image: url(./../../assets/images/icons/telf.svg);
 			background-repeat: no-repeat;
 			width: 20px;
 			height: 20px;
