--- a/src/shared_modules/InputBlock/InputBlock.css
+++ b/src/shared_modules/InputBlock/InputBlock.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url("../../assets/fonts/Gilroy-Regular.eot");
-  src: url("../../assets/fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Gilroy-Regular.woff2") format("woff2"), url("../../assets/fonts/Gilroy-Regular.woff") format("woff"), url("../../assets/fonts/Gilroy-Regular.ttf") format("truetype");
+  src: url("./../../assets/fonts/Gilroy-Regular.eot");
+  src: url("./../../assets/fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("./../../assets/fonts/Gilroy-Regular.woff2") format("woff2"), url("./../../assets/fonts/Gilroy-Regular.woff") format("woff"), url("./../../assets/fonts/Gilroy-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url("../../assets/fonts/Gilroy-Bold.eot");
-  src: url("../../assets/fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Gilroy-Bold.woff2") format("woff2"), url("../../assets/fonts/Gilroy-Bold.woff") format("woff"), url("../../assets/fonts/Gilroy-Bold.ttf") format("truetype");
+  src: url("./../../assets/fonts/Gilroy-Bold.eot");
+  src: url("./../../assets/fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("./../../assets/fonts/Gilroy-Bold.woff2") format("woff2"), url("./../../assets/fonts/Gilroy-Bold.woff") format("woff"), url("./../../assets/fonts/Gilroy-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-display: swap; }
