--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url("../../assets/fonts/Gilroy-Regular.eot");
-  src: url("../../assets/fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Gilroy-Regular.woff2") format("woff2"), url("../../assets/fonts/Gilroy-Regular.woff") format("woff"), url("../../assets/fonts/Gilroy-Regular.ttf") format("truetype");
+  src: url("./../../assets/fonts/Gilroy-Regular.eot");
+  src: url("./../../assets/fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("./../../assets/fonts/Gilroy-Regular.woff2") format("woff2"), url("./../../assets/fonts/Gilroy-Regular.woff") format("woff"), url("./../../assets/fonts/Gilroy-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url("../../assets/fonts/Gilroy-Bold.eot");
-  src: url("../../assets/fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Gilroy-Bold.woff2") format("woff2"), url("../../assets/fonts/Gilroy-Bold.woff") format("woff"), url("../../assets/fonts/Gilroy-Bold.ttf") format("truetype");
+  src: url("./../../assets/fonts/Gilroy-Bold.eot");
+  src: url("./../../assets/fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("./../../assets/fonts/Gilroy-Bold.woff2") format("woff2"), url("./../../assets/fonts/Gilroy-Bold.woff") format("woff"), url("./../../assets/fonts/Gilroy-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-display: swap; }
@@ -42,9 +42,9 @@ html {
     html {
       font-size: 20px; } }
 
-body {
+main {
   background: #f0f9f9;
-  background-image: url(../assets/images/icons/bg-lasik.png);
+  background-image: url(./../assets/images/icons/bg-lasik.png);
   background-repeat: no-repeat;
   background-size: 360px;
   background-position-y: 500px;
@@ -53,29 +53,29 @@ body {
   font-size: 1rem;
   color: #cccccc; }
   @media (min-width: 768px) {
-    body {
+    main {
       background-size: 500px; } }
   @media (min-width: 1500px) {
-    body {
+    main {
       background-size: 700px; } }
-  body .wrapper-general {
+  main .wrapper-general {
     max-width: 87%;
     margin: auto; }
     @media (min-width: 768px) {
-      body .wrapper-general {
+      main .wrapper-general {
         max-width: 70%; } }
     @media (min-width: 1080px) {
-      body .wrapper-general {
+      main .wrapper-general {
         max-width: 55%; } }
     @media (min-width: 1360px) {
-      body .wrapper-general {
+      main .wrapper-general {
         max-width: 45%; } }
-    body .wrapper-general h1 {
+    main .wrapper-general h1 {
       font-size: 1.6rem;
       color: #808080;
       margin: 30px 0px 10px 0px; }
       @media (min-width: 1080px) {
-        body .wrapper-general h1 {
+        main .wrapper-general h1 {
           font-size: 1.3rem; } }
 
 .loading-center {
