--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -36,9 +36,9 @@ html {
 	}
 }
 
-body {
+main {
 	background: lighten($primaryColorBg, 12%);
-	background-image: url(../assets/images/icons/bg-lasik.png);
+	background-image: url(./../assets/images/icons/bg-lasik.png);
 	background-repeat: no-repeat;
 	background-size: 360px;
 	background-position-y: 500px;
