--- a/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.scss
+++ b/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.scss
@@ -2,7 +2,13 @@
 @import "../../../styles/partials/mixins";
 
 .calendar-online-appointment-page {
+	
+
 	.card-container {
+		@include phone-small {
+			display: flex;
+			justify-content: center;
+		}
 		margin-bottom: 20px;
 		.button-container {
 			padding: 20px;
