--- a/src/page_modules/sorryPage/SorryPage.scss
+++ b/src/page_modules/sorryPage/SorryPage.scss
@@ -12,20 +12,22 @@
 		}
 	}
 	.wrapper-text {
-
-        .uns-leid{
-            color: $secondaryColor; 
-        }
-        margin: 0 auto;
+		.uns-leid {
+			color: $secondaryColor;
+		}
+		margin: 0 auto;
 		margin-top: 20px;
 		max-width: 70%;
 		text-align: center;
+		@include phone-small {
+			max-width: 100%;
+		}
 	}
 	.buttons-container {
 		width: 70%;
 		margin: 0 auto;
 		margin-top: 50px;
-        display: flex;
+		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
