--- a/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.css
+++ b/src/page_modules/video_call/CalendarOnlinePage/CalendarOnlinePage.css
@@ -1,5 +1,9 @@
 .calendar-online-appointment-page .card-container {
   margin-bottom: 20px; }
+  @media (min-width: 360px) {
+    .calendar-online-appointment-page .card-container {
+      display: flex;
+      justify-content: center; } }
   .calendar-online-appointment-page .card-container .button-container {
     padding: 20px; }
     .calendar-online-appointment-page .card-container .button-container .redirect-options {
