--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -61,6 +61,9 @@ body {
   body .wrapper-general {
     max-width: 87%;
     margin: auto; }
+    @media (min-width: 360px) {
+      body .wrapper-general {
+        max-width: 100%; } }
     @media (min-width: 768px) {
       body .wrapper-general {
         max-width: 70%; } }
