--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -59,6 +59,10 @@ body {
 		max-width: 87%;
 		margin: auto;
 
+		@include phone-small {
+			max-width: 100%;
+		}
+
 		@include tablet-medium {
 			max-width: 70%;
 		}
