--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
@@ -18,7 +18,7 @@
        }
 
         h1{
-        color: $secondaryColor;
+        color: $secondaryColor !important;
         text-align:center;
         font-size: 1.8rem;
         margin-top:0px;
