--- a/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.scss
+++ b/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.scss
@@ -52,7 +52,7 @@
                input, select{
                    outline: 0;
                    margin:auto;
-                   border-width: 0 0 1px;
+                   border-width: 0 0 1px !important;
                    border-color: rgba(151, 151, 151, 0.2);
                    padding: 0px 0px 5px 0px;
                    background: none;
@@ -75,6 +75,8 @@
                background-image: url(../../../../assets/images/icons/arrow-select.svg);
                background-repeat: no-repeat;
                background-position: right;
+               box-shadow: none;
+             
                }
        
                &.marg-from{
@@ -94,7 +96,7 @@
            
                label{
                display: flex;
-           
+                
                    input[type='checkbox']{
                        -webkit-appearance: checkbox !important;
                        background: darkgoldenrod;
@@ -117,7 +119,7 @@
                    line-height: 15px;
                    display: inline;
                    margin-left: 5px;
-
+                   color: $texto !important;
                       @include desktop-small{
                       font-size: .6rem;
                       }
@@ -132,4 +134,137 @@
            }
        }
 
+    }
+    
+
+    .main-btn {
+        text-align: center;
+        background-color: $tertiaryColor !important;
+        width: 100% !important;
+        height: max-content !important;
+        padding: 15px !important;
+        margin: auto !important;
+        font-family: $primaryFont !important;
+        font-size: 1.1rem !important;
+        font-weight: bold !important;
+        color: $light !important;
+        border: 1.7px solid $tertiaryColor !important;
+        border-radius: 50px !important;
+        cursor: pointer !important;
+        margin: 30px 0px !important;
+        text-transform: uppercase !important;
+        transition: all 300ms ease-in-out !important;
+        &:disabled {
+            background-color: $texto !important;
+            border: 1.7px solid $texto !important;
+        }
+        &:hover {
+            color: $tertiaryColor !important;
+            background-color: transparent !important;
+        }
+    
+        &:focus {
+            outline: 0 !important;
+        }
+    
+        @include tablet-medium {
+            width: 70% !important;
+        }
+    
+        @include tablet-large {
+            width: 80% !important;
+        }
+    
+        @include desktop-small {
+            font-size: 0.8rem !important;
+        }
+    
+        @include desktop-medium {
+            width: 70% !important;
+        }
+    
+        &.secondary-btn {
+            background-color: transparent !important;
+        }
+    
+        &.back-button {
+            position: relative !important;
+            font-size: 1rem !important;
+            background-color: transparent !important;
+            color: $tertiaryColor !important;
+            width: max-content !important;
+            text-transform: initial !important;
+            box-sizing: border-box !important;
+            padding: 10px 25px 10px 36px !important; 
+            margin: 0px !important;
+    
+            &:hover {
+                background-color: $tertiaryColor !important;
+                color: white !important;
+    
+                &:after {
+                    background-image: url(./../../../../assets/images/icons/arrow-white.svg) !important;
+                }
+            }
+    
+            &:after {
+                content: "";
+                position: absolute;
+                left: 13px;
+                background-image: url(./../../../../assets/images/icons/back.svg);
+                background-repeat: no-repeat;
+                width: 35px;
+                height: 35px;
+    
+                @include desktop-small {
+                    top: 8px;
+                    width: 35px;
+                    height: 35px;
+                }
+            }
+    
+            @include desktop-small {
+                font-size: 0.7rem;
+            }
+        }
+    
+        &.nav-number {
+            border-radius: 0px;
+            margin: 0px;
+            font-size: 0.9rem;
+            padding: 12px 12px 12px 30px;
+            position: relative;
+    
+            &:after {
+                content: "";
+                background-image: url(./../../../../assets/images/icons/telf.svg);
+                background-repeat: no-repeat;
+                width: 20px;
+                height: 20px;
+                position: absolute;
+                left: 6px;
+                top: 10px;
+            }
+    
+            @include tablet-medium {
+                width: 100%;
+            }
+    
+            @include desktop-small {
+                font-size: 0.7rem;
+            }
+        }
+    }
+    
+    .transparent-button {
+        background-color: transparent !important;
+        color: $tertiaryColor;
+        &:hover {
+            background-color: $tertiaryColor !important;
+            color: white;
+        }
+    }
+    
+    .small-margin {
+        margin: 5px 0;
     }
