--- a/src/page_modules/sorryPage/SorryPage.css
+++ b/src/page_modules/sorryPage/SorryPage.css
@@ -42,40 +42,52 @@ html {
     html {
       font-size: 20px; } }
 
-main {
+body #erw-root {
   background: #f0f9f9;
   background-image: url(./../assets/images/icons/bg-lasik.png);
   background-repeat: no-repeat;
   background-size: 360px;
-  background-position-y: 500px;
+  background-position-y: 90%;
   background-position-x: right;
-  font-family: "Gilroy";
+  font-family: "Gilroy" !important;
   font-size: 1rem;
-  color: #cccccc; }
+  color: #cccccc;
+  padding: 100px 0 200px 0; }
+  body #erw-root h1, body #erw-root h2, body #erw-root h3, body #erw-root h4, body #erw-root h5, body #erw-root h6, body #erw-root p, body #erw-root a, body #erw-root span, body #erw-root div, body #erw-root strong, body #erw-root b {
+    font-family: "Gilroy" !important; }
+  body #erw-root .DayPicker_weekHeader_ul {
+    margin-left: 0 !important;
+    margin-bottom: 0 !important; }
+  body #erw-root .CalendarMonth_table {
+    border: 0 !important; }
+    body #erw-root .CalendarMonth_table tr {
+      background-color: white !important; }
+      body #erw-root .CalendarMonth_table tr td {
+        border: 0 !important; }
   @media (min-width: 768px) {
-    main {
+    body #erw-root {
       background-size: 500px; } }
   @media (min-width: 1500px) {
-    main {
+    body #erw-root {
       background-size: 700px; } }
-  main .wrapper-general {
+  body #erw-root .wrapper-general {
     max-width: 87%;
     margin: auto; }
     @media (min-width: 768px) {
-      main .wrapper-general {
+      body #erw-root .wrapper-general {
         max-width: 70%; } }
     @media (min-width: 1080px) {
-      main .wrapper-general {
+      body #erw-root .wrapper-general {
         max-width: 55%; } }
     @media (min-width: 1360px) {
-      main .wrapper-general {
+      body #erw-root .wrapper-general {
         max-width: 45%; } }
-    main .wrapper-general h1 {
+    body #erw-root .wrapper-general h1 {
       font-size: 1.6rem;
       color: #808080;
       margin: 30px 0px 10px 0px; }
       @media (min-width: 1080px) {
-        main .wrapper-general h1 {
+        body #erw-root .wrapper-general h1 {
           font-size: 1.3rem; } }
 
 .loading-center {
