--- a/src/shared_modules/Button/Button.scss
+++ b/src/shared_modules/Button/Button.scss
@@ -2,71 +2,71 @@
 @import "../../styles/partials/mixins";
 
 .main-btn {
-	background-color: $tertiaryColor;
-	width: 100%;
-	height: max-content;
-	padding: 15px;
-	margin: auto;
-	font-family: $primaryFont;
-	font-size: 1.1rem;
-	font-weight: bold;
-	color: $light;
-	border: 1.7px solid $tertiaryColor;
-	border-radius: 50px;
-	cursor: pointer;
-	margin: 30px 0px;
-	text-transform: uppercase;
-	transition: all 300ms ease-in-out;
+	background-color: $tertiaryColor !important;
+	width: 100% !important;
+	height: max-content !important;
+	padding: 15px !important;
+	margin: auto !important;
+	font-family: $primaryFont !important;
+	font-size: 1.1rem !important;
+	font-weight: bold !important;
+	color: $light !important;
+	border: 1.7px solid $tertiaryColor !important;
+	border-radius: 50px !important;
+	cursor: pointer !important;
+	margin: 30px 0px !important;
+	text-transform: uppercase !important;
+	transition: all 300ms ease-in-out !important;
 	&:disabled {
-		background-color: $texto;
-		border: 1.7px solid $texto;
+		background-color: $texto !important;
+		border: 1.7px solid $texto !important;
 	}
 	&:hover {
-		color: $tertiaryColor;
-		background-color: transparent;
+		color: $tertiaryColor !important;
+		background-color: transparent !important;
 	}
 
 	&:focus {
-		outline: 0;
+		outline: 0 !important;
 	}
 
 	@include tablet-medium {
-		width: 70%;
+		width: 70% !important;
 	}
 
 	@include tablet-large {
-		width: 80%;
+		width: 80% !important;
 	}
 
 	@include desktop-small {
-		font-size: 0.8rem;
+		font-size: 0.8rem !important;
 	}
 
 	@include desktop-medium {
-		width: 70%;
+		width: 70% !important;
 	}
 
 	&.secondary-btn {
-		background-color: transparent;
+		background-color: transparent !important;
 	}
 
 	&.back-button {
-		position: relative;
-		font-size: 1rem;
-		background-color: transparent;
-		color: $tertiaryColor;
-		width: max-content;
-		text-transform: initial;
-		box-sizing: border-box;
-		padding: 10px 25px 10px 36px;
-		margin: 0px;
+		position: relative !important;
+		font-size: 1rem !important;
+		background-color: transparent !important;
+		color: $tertiaryColor !important;
+		width: max-content !important;
+		text-transform: initial !important;
+		box-sizing: border-box !important;
+		padding: 10px 25px 10px 36px !important; 
+		margin: 0px !important;
 
 		&:hover {
-			background-color: $tertiaryColor;
-			color: white;
+			background-color: $tertiaryColor !important;
+			color: white !important;
 
 			&:after {
-				background-image: url(./../../assets/images/icons/arrow-white.svg);
+				background-image: url(./../../assets/images/icons/arrow-white.svg) !important;
 			}
 		}
 
