--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -47,7 +47,8 @@
     color: #808080;
     font-weight: bold;
     font-size: 0.9rem;
-    margin-left: 15px; }
+    margin-left: 15px;
+    padding: 0; }
     @media (min-width: 540px) {
       .card p {
         font-size: 1.1rem; } }
