--- a/src/shared_modules/Card/Card.scss
+++ b/src/shared_modules/Card/Card.scss
@@ -36,7 +36,7 @@
 		font-weight: bold;
 		font-size: 0.9rem;
 		margin-left: 15px;
-
+		padding: 0;
 		@include tablet-small {
 			font-size: 1.1rem;
 		}
