--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -63,6 +63,7 @@ body #erw-root {
 			background-color: white !important;
 			td{
 				border: 0 !important;
+				vertical-align: middle !important;
 			}
 		}
 	} 
