--- a/src/shared_modules/Calendar/Calendar.scss
+++ b/src/shared_modules/Calendar/Calendar.scss
@@ -59,7 +59,7 @@
 			.CalendarDay__highlighted_calendar {
 				opacity: 1;
 				background-color: transparent;
-
+				font-weight: 900 !important;
 				&:focus {
 					background: transparent;
 				}
